--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,15 @@
 {
-    "name": "warlof/seat-discord-connector",
-    "description": "A SeAT plugin which maintain user access on a Discord Guild based on defined pattern.",
+    "name": "winterco/seat-mumble-connector",
+    "description": "A SeAT plugin which maintain user access on a Mumble Guild based on defined pattern.",
     "type": "seat-plugin",
     "autoload": {
         "psr-4": {
-            "Warlof\\Seat\\Connector\\Discord\\": "src/"
+            "WinterCo\\Connector\\Mumble\\": "src/"
         }
     },
     "require": {
         "eveseat/eveapi": "^3.0",
-        "eveseat/web": "^3.0",
-        "erusev/parsedown": "^1.7",
-        "restcord/restcord": "^0.3"
+        "eveseat/web": "^3.0"
     },
     "license": "GPL-3.0-or-later",
     "authors": [
@@ -24,7 +22,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Warlof\\Seat\\Connector\\Discord\\DiscordConnectorServiceProvider"
+                "WinterCo\\Connector\\Mumble\\MumbleConnectorServiceProvider"
             ]
         }
     }
